@startuml state_machine

skinParam lineType ortho

state StateMachine {
    state StateMachineA {
        state StateAA : entry:\tx += 1
        state StateAB
        state c1 <<choice>>

        [*] --> c1
        c1 --> StateAA : [x = 0]
        c1 --> StateAB : [x > 1]
        StateAA --> StateAB : EVENT_1
        StateAB --> StateAA : EVENT_2
        StateAB --> [*] : EVENT_1
    }

    state StateMachineB {
        state StateBA
        state StateBB

        [*] --> [H]
        [H] --> StateBA
        StateBA --> StateBB : EVENT_3
        StateBA --> [*] : EVENT_4
        StateBB --> [*] : EVENT_3
    }

    [*] --> StateMachineA
    StateMachineA --> StateMachineB : EVENT_0
    StateMachineA --> StateMachineB
    StateMachineB --> StateMachineA : EVENT_1
    StateMachineB --> StateMachineA
}

@enduml
